--- a/src/app/components/todos/todos.component.css
+++ b/src/app/components/todos/todos.component.css
@@ -1,4 +1,4 @@
-.todo {
+/* .todo {
     display: flex;
     padding: 10px 15px;
     background-color:#fff;
@@ -51,4 +51,4 @@
     padding: 10px 15px;
     font-size: 18px;
     font-weight: bold;
-}
+} */
