--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/tasks">Tasks</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Inscription</a>
+          </li>
        
         </ul>
      
